--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
+	<parent>
+		<groupId>com.netiq.thirdparty</groupId>
+		<artifactId>nsl-parent</artifactId>
+		<version>3-SNAPSHOT</version>
+	</parent>
+		
 	<groupId>com.zelix</groupId>
 	<artifactId>zkm-obfuscation</artifactId>
 	<packaging>pom</packaging>
-	<version>4.0-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 	<name>zkm Maven</name>
 	<url>http://www.zelix.com</url>
 
@@ -17,21 +24,6 @@ A Java bytecode obfuscator changes Java bytecode to make the source code generat
 		<name>Zelix Pty Ltd</name>
 		<url>http://www.zelix.com/klassmaster/contactUs.html</url>
 	</organization>
-
-	<!-- Deploy to NetIQ -->
-	<distributionManagement>
-		<repository>
-			<id>sm.nexus</id>
-			<name>Security Management site</name>
-			<url>dav:http://nexus.esecurity.net:8081/nexus/content/repositories/releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>sm.nexus</id>
-			<name>Security Management site</name>
-			<url>dav:http://nexus.esecurity.net:8081/nexus/content/repositories/snapshots/</url>
-			<uniqueVersion>false</uniqueVersion>
-		</snapshotRepository>
-	</distributionManagement>
 
 	<modules>
 		<module>zkm</module> 
