Revert previous parent change, add settings for Sonatype OSS deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ target/
 .settings
 .project
 .classpath
+zkm/src/defaultExclude.txt
+zkm/src/defaultTrimExclude.txt
+zkm/src/license.html
+/zkm/src/unpack
